--- a/Angular/AngularBootstrapPractice/index.html
+++ b/Angular/AngularBootstrapPractice/index.html
@@ -17,5 +17,15 @@
             <button ng-show="product.canPurchase">Add to cart</button>
         </div>
     </div>
+
+    <ul class="list-group">
+        <li class="list-group-item" ng-repeat="product in store.products | orderBy:'-price'"> <!-- minus is desc order-->
+            <h3>
+                {{product.name}}
+                <em class="pull-right">{{product.price | currency}}</em>
+                <img ng-src="{{product.images[0].thumb}}" />
+            </h3>
+        </li>
+    </ul>
 </body>
 </html>
