--- a/Angular/AngularBootstrapPractice/index.html
+++ b/Angular/AngularBootstrapPractice/index.html
@@ -8,24 +8,89 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="app.js"></script>
 </head>
-<body class="container" ng-controller="StoreController as store"> <!--only controller properties are accessible in this div-->
-    <div ng-repeat="product in store.products">
-        <div ng-hide="product.soldOut"> <!-- or ng-show="!store.product.soldOut"-->
-            <h1>{{product.name}}</h1>
-            <h2>${{product.price}}</h2>
-            <p>{{product.description}}</p>
-            <button ng-show="product.canPurchase">Add to cart</button>
+<body class="container" > <!--only controller properties are accessible in this div-->
+    <div ng-controller="StoreController as store">
+        <div ng-repeat="product in store.products">
+            <div ng-hide="product.soldOut">
+                <!-- or ng-show="!store.product.soldOut"-->
+                <h1>{{product.name}}</h1>
+                <h2>${{product.price}}</h2>
+                <p>{{product.description}}</p>
+                <button ng-show="product.canPurchase">Add to cart</button>
+            </div>
+
+
+            <ul class="list-group">
+                <li class="list-group-item" ng-repeat="product in store.products | orderBy:'-price'">
+                    <!-- minus is desc order-->
+                    <h3>
+                        {{product.name}}
+                        <em class="pull-right">{{product.price | currency}}</em>
+                        <img ng-src="{{product.images[0].thumb}}" />
+                    </h3>
+                </li>
+                <li class="small-image pull-left thumbnail" ng-repeat="image in products.images">
+                    <img ng-src="{{image}}" />
+                </li>
+            </ul>
+
+            <section ng-controller="PanelController as panel">
+                <ul class="nav nav-pills">
+                    <li ng-class="{active:panel.isSelected(1)}">
+                        <a href="" ng-click="panel.selectTab(1)">Description</a>
+                    </li>
+                    <li ng-class="{active:panel.isSelected(2)}">
+                        <a href="" ng-click="panel.selectTab(2)">Specifications</a>
+                    </li>
+                    <li ng-class="{active:panel.isSelected(3)}">
+                        <a href="" ng-click="panel.selectTab(3)">Reviews</a>
+                    </li>
+                </ul>
+
+                <div class="panel" ng-show="panel.isSelected(1)">
+                    <h4>Description</h4>
+                    <p>{{product.description}}</p>
+                </div>
+                <div class="panel" ng-show="panel.isSelected(2)">
+                    <h4>Specifications</h4>
+                    <blockquote>None yet</blockquote>
+                </div>
+                <div class="panel" ng-show="panel.isSelected(3)">
+                    <h4>Reviews</h4>
+                    <blockquote ng-repeat="review in product.reviews">
+                        <strong>Stars: {{review.stars}}</strong>
+                        {{review.body}}
+                        <cite>-{{review.author}}</cite>
+                    </blockquote>
+                    <!--  Review Form -->
+                    <form name="reviewForm" ng-controller="ReviewController as reviewCtrl">
+                        <!--  Live Preview -->
+                        <blockquote>
+                            <strong>{{review.stars}} Stars</strong>
+                            {{review.body}}
+                            <cite class="clearfix">—{{review.author}}</cite>
+                        </blockquote>
+
+                        <!--  Review Form -->
+                        <h4>Submit a Review</h4>
+                        <fieldset class="form-group">
+                            <select ng-model="review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars">
+                                <option value="">Rate the Product</option>
+                            </select>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <textarea ng-model="review.body" class="form-control" placeholder="Write a short review of the product..." title="Review"></textarea>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <input ng-model="review.author" type="email" class="form-control" placeholder="jimmyDean@example.org" title="Email" />
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <input type="submit" class="btn btn-primary pull-right" value="Submit Review" />
+                        </fieldset>
+                    </form>
+                </div>
+            </section>
         </div>
     </div>
-
-    <ul class="list-group">
-        <li class="list-group-item" ng-repeat="product in store.products | orderBy:'-price'"> <!-- minus is desc order-->
-            <h3>
-                {{product.name}}
-                <em class="pull-right">{{product.price | currency}}</em>
-                <img ng-src="{{product.images[0].thumb}}" />
-            </h3>
-        </li>
-    </ul>
 </body>
 </html>
