--- a/Angular/AngularBootstrapPractice/index.html
+++ b/Angular/AngularBootstrapPractice/index.html
@@ -7,6 +7,7 @@
     <script src="Bootstrap/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="app.js"></script>
+    <link href="css/style.css" rel="stylesheet" />
 </head>
 <body class="container">
     <!--only controller properties are accessible in this div-->
@@ -48,12 +49,12 @@
                     </blockquote>
 
                     <!--  New Review Form -->
-                    <form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewCtrl.addReview(product)" novalidate>
+                    <form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewForm.$valid && reviewCtrl.addReview(product)" novalidate>
                         <!--  Live Preview -->
                         <blockquote>
                             <strong>{{reviewCtrl.review.stars}} Stars</strong>
                             {{reviewCtrl.review.body}}
-                            <cite class="clearfix">—{{reviewCtrl.review.author}}</cite>
+                            <cite class="clearfix">—{{reviewCtrl.review.author}} on {{review.createdOn | date}}</cite>
                         </blockquote>
 
                         <!--  Review Form -->
@@ -69,7 +70,7 @@
                         <fieldset class="form-group">
                             <input ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="jimmyDean@example.org" title="Email" required />
                         </fieldset>
-                        <div>reviewForm is {{reviewForm.$valid}}</div>
+                        <!--<div>reviewForm is {{reviewForm.$valid}}</div>-->
                         <fieldset class="form-group">
                             <input type="submit" class="btn btn-primary pull-right" value="Submit Review" />
                         </fieldset>
