--- a/Angular/AngularBootstrapPractice/index.html
+++ b/Angular/AngularBootstrapPractice/index.html
@@ -14,67 +14,40 @@
     <div ng-controller="StoreController as store">
         <div ng-repeat="product in store.products">
             <div class="row">
-                <product-title></product-title>
-                <img ng-src="{{product.images[0].thumb}}" />
+                <h3><product-title></h3>
 
-                <section ng-controller="PanelController as panel">
-                    <ul class="nav nav-pills">
-                        <li ng-class="{active:panel.isSelected(1)}">
-                            <a href="" ng-click="panel.selectTab(1)">Description</a>
-                        </li>
-                        <li ng-class="{active:panel.isSelected(2)}">
-                            <a href="" ng-click="panel.selectTab(2)">Specifications</a>
-                        </li>
-                        <li ng-class="{active:panel.isSelected(3)}">
-                            <a href="" ng-click="panel.selectTab(3)">Reviews</a>
-                        </li>
-                    </ul>
+                <!--<product-gallery></product-gallery>-->
 
-                    <div class="panel" ng-show="panel.isSelected(1)">
-                        <h4>Description</h4>
-                        <p>{{product.description}}</p>
-                    </div>
-                    <div class="panel" ng-show="panel.isSelected(2)">
-                        <h4>Specifications</h4>
-                        <blockquote>{{product.specifications}}</blockquote>
-                    </div>
-                    <div class="panel" ng-show="panel.isSelected(3)">
-                        <h4>Reviews</h4>
-                        <blockquote ng-repeat="review in product.reviews">
-                            <strong>Stars: {{review.stars}}</strong>
-                            {{review.body}}
-                            <cite>-{{review.author}}</cite>
-                        </blockquote>
+                <product-panels></product-panels>
 
-                        <!--  New Review Form -->
-                        <form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewForm.$valid && reviewCtrl.addReview(product)" novalidate>
-                            <!--  Live Preview -->
-                            <blockquote>
-                                <strong>{{reviewCtrl.review.stars}} Stars</strong>
-                                {{reviewCtrl.review.body}}
-                                <cite class="clearfix">—{{reviewCtrl.review.author}} on {{review.createdOn | date}}</cite>
-                            </blockquote>
+                <!--  New Review Form -->
+                <form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewForm.$valid && reviewCtrl.addReview(product)" novalidate>
+                    <!--  Live Preview -->
+                    <blockquote>
+                        <strong>{{reviewCtrl.review.stars}} Stars</strong>
+                        {{reviewCtrl.review.body}}
+                        <cite class="clearfix">—{{reviewCtrl.review.author}} on {{review.createdOn | date}}</cite>
+                    </blockquote>
 
-                            <!--  Review Form -->
-                            <h4>Submit a Review</h4>
-                            <fieldset class="form-group">
-                                <select ng-model="reviewCtrl.review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" required>
-                                    <option value="">Rate the Product</option>
-                                </select>
-                            </fieldset>
-                            <fieldset class="form-group">
-                                <textarea ng-model="reviewCtrl.review.body" class="form-control" placeholder="Write a short review of the product..." title="Review" required></textarea>
-                            </fieldset>
-                            <fieldset class="form-group">
-                                <input ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="jimmyDean@example.org" title="Email" required />
-                            </fieldset>
-                            <fieldset class="form-group">
-                                <input type="submit" class="btn btn-primary pull-right" value="Submit Review" />
-                            </fieldset>
-                        </form>
-                    </div>
-                </section>
+                    <!--  Review Form -->
+                    <h4>Submit a Review</h4>
+                    <fieldset class="form-group">
+                        <select ng-model="reviewCtrl.review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" required>
+                            <option value="">Rate the Product</option>
+                        </select>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <textarea ng-model="reviewCtrl.review.body" class="form-control" placeholder="Write a short review of the product..." title="Review" required></textarea>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="jimmyDean@example.org" title="Email" required />
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input type="submit" class="btn btn-primary pull-right" value="Submit Review" />
+                    </fieldset>
+                </form>
             </div>
+
         </div>
     </div>
 </body>
