--- a/Angular/AngularBootstrapPractice/product-title.html
+++ b/Angular/AngularBootstrapPractice/product-title.html
@@ -1,11 +1,3 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-	<meta charset="utf-8" />
-</head>
-<body>
-    <h2>{{product.name}}</h2>
-    <em class="pull-right">{{product.price | currency}}</em>
-</body>
-</html>
+﻿<h2>{{product.name}}</h2>
+<em class="pull-right">{{product.price | currency}}</em>
+<img ng-src="{{product.images[0].thumb}}" />
