--- a/Angular/AngularBootstrapPractice/index.html
+++ b/Angular/AngularBootstrapPractice/index.html
@@ -7,6 +7,7 @@
     <script src="Bootstrap/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="app.js"></script>
+    <script src="products.js"></script>
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body class="container">
